@@ -14,6 +14,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Executor;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
@@ -91,7 +92,7 @@ public class Renderer {
      * @param height The height of the desired output
      * @param resolution (Floating point greater than 0 and lower or equal to 1) Controls the number of rays traced. (1 = Every pixel is ray-traced)
      */
-    public static void renderScene_(Scene scene, Graphics gfx, int width, int height, float resolution) {
+    public static void renderScene1(Scene scene, Graphics gfx, int width, int height, float resolution) {
         int blockSize = (int) (1 / resolution);
         long start = System.currentTimeMillis();
 
@@ -249,9 +250,113 @@ public class Renderer {
      * @param height The height of the desired output
      * @param resolution (Floating point greater than 0 and lower or equal to 1) Controls the number of rays traced. (1 = Every pixel is ray-traced)
      */
-    // renderScene_FixedThreadPool
+    public static void renderScene_FixedThreadPool(Scene scene, Graphics gfx, int width, int height, float resolution) {
+    	ExecutorService exec = Executors.newFixedThreadPool(4);
+    	
+    	resolution = 0.08f;
+    	int blockSize = (int) (1 / resolution);
+    	//1 threadpool/column
+    	int taskCount = width/blockSize;
+    	CountDownLatch latch = new CountDownLatch(taskCount);
+    	
+        long start = System.currentTimeMillis();
+
+        for (int x = 0; x<width; x+=blockSize) {
+        	int _X = x; //We did that cuz local variable x was defined in an enclosing scope
+        	exec.submit(() -> {
+				try {
+					for (int y = 0; y<height; y+=blockSize) {
+				        float[] uv = getNormalizedScreenCoordinates(_X, y, width, height);
+				        PixelData pixelData = computePixelInfo(scene, uv[0], uv[1]);
+				        synchronized(gfx) {
+				        	gfx.setColor(pixelData.getColor().toAWTColor());
+				            gfx.fillRect(_X, y, blockSize, blockSize);
+				        }
+				    }
+				} finally {
+					latch.countDown();
+				}
+
+			});
+        }
+        
+		try {
+			latch.await();
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
+
+        System.out.println("Rendered in " + (System.currentTimeMillis() - start) + "ms");
+        
+        exec.shutdown();
+        try {
+			exec.awaitTermination(1, TimeUnit.HOURS);
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
+    }
+    
+    /** Renders the scene to a java.awt.Graphics object BUT USING ExecutorService.newSingleThreadExecutor
+     * @param scene The scene to Render
+     * @param width The width of the desired output
+     * @param height The height of the desired output
+     * @param resolution (Floating point greater than 0 and lower or equal to 1) Controls the number of rays traced. (1 = Every pixel is ray-traced)
+     */
+    public static void renderScene_SingleThreadExecutor(Scene scene, Graphics gfx, int width, int height, float resolution) {
+    	ExecutorService exec = Executors.newSingleThreadExecutor();
+    	
+    	resolution = 0.08f;
+    	int blockSize = (int) (1 / resolution);
+    	//1 threadpool/column
+    	int taskCount = width/blockSize;
+    	CountDownLatch latch = new CountDownLatch(taskCount);
+    	
+        long start = System.currentTimeMillis();
+
+        for (int x = 0; x<width; x+=blockSize) {
+        	int _X = x; //We did that cuz local variable x was defined in an enclosing scope
+        	exec.submit(() -> {
+				try {
+					for (int y = 0; y<height; y+=blockSize) {
+				        float[] uv = getNormalizedScreenCoordinates(_X, y, width, height);
+				        PixelData pixelData = computePixelInfo(scene, uv[0], uv[1]);
+				        synchronized(gfx) {
+				        	gfx.setColor(pixelData.getColor().toAWTColor());
+				            gfx.fillRect(_X, y, blockSize, blockSize);
+				        }
+				    }
+				} finally {
+					latch.countDown();
+				}
+
+			});
+        }
+        
+		try {
+			latch.await();
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
+
+        System.out.println("Rendered in " + (System.currentTimeMillis() - start) + "ms");
+        
+        exec.shutdown();
+        try {
+			exec.awaitTermination(1, TimeUnit.HOURS);
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
+    }
+    
+    
+    /** Renders the scene to a java.awt.Graphics object BUT USING ExecutorService.ThreadPerTaskExecutor
+     * @param scene The scene to Render
+     * @param width The width of the desired output
+     * @param height The height of the desired output
+     * @param resolution (Floating point greater than 0 and lower or equal to 1) Controls the number of rays traced. (1 = Every pixel is ray-traced)
+     */
     public static void renderScene(Scene scene, Graphics gfx, int width, int height, float resolution) {
-    	ExecutorService exec = Executors.newFixedThreadPool(200);
+    	ExecutorService executor = Executors.newThreadPerTaskExecutor(Thread.ofVirtual().factory());
     	
     	resolution = 0.08f;
     	int blockSize = (int) (1 / resolution);
